--- a/index.html
+++ b/index.html
@@ -16,14 +16,39 @@
                 <h1>App Peluqueria</h1>
             </header>
             <nav class="tabs">
-                <button type="button">Servicios</button>
-                <button type="button">Información Cliente</button>
-                <button type="button">Resumen</button>
+                <button type="button" data-paso="1">Servicios</button>
+                <button type="button" data-paso="2">Información Cliente</button>
+                <button type="button" data-paso="3">Resumen</button>
             </nav>
 
             <!-- Inicia contenido App -->
 
-            
+            <div id="paso-1" class="seccion">
+                <h2>Servicios</h2>
+                <p class="text-center">Elige tus servicios a continuación.</p>
+
+                <!-- <div class="reset-btn">
+                    <button class="reset">Reset</button>
+                </div> -->
+
+                <div id="servicios" class="listado-servicios">
+
+                </div>
+            </div>
+
+            <div id="paso-2" class="seccion">
+                <h2>Tus Datos y Citas</h2>
+            </div>
+
+            <div id="paso-3" class="seccion">
+                <h2>Resumen</h2>
+            </div>
+
+            <div class="paginacion">
+                <button id="anterior">&laquo; Anterior</button>
+
+                <button id="siguiente">Siguiente &raquo;</button>
+            </div>
 
         </div>
     </div>
