--- a/index.html
+++ b/index.html
@@ -38,9 +38,41 @@
 
             <div id="paso-2" class="seccion">
                 <h2>Tus Datos y Citas</h2>
+
+                <p class="text-center">Coloca tus datos y fecha de tu cita.</p>
+
+                <form class="formulario">
+                    <div class="campo">
+                        <label for="nombre">Nombre</label>
+                        <input 
+                            id="nombre"
+                            type="text"
+                            placeholder="Tu Nombre"
+                        >
+                    </div>
+
+                    <div class="campo">
+                        <label for="fecha">Fecha</label>
+                        <input 
+                            id="fecha"
+                            type="date"
+                            min="2021-03-06"
+                        >
+                    </div>
+
+                    <div class="campo">
+                        <label for="hora">Hora</label>
+                        <input 
+                            id="hora"
+                            type="time"
+                        >
+                    </div>
+
+                </form>
+
             </div>
 
-            <div id="paso-3" class="seccion">
+            <div id="paso-3" class="seccion contenido-resumen">
                 <h2>Resumen</h2>
             </div>
 
